implemented search and pagination. on the getallcourse method